# semantic-associative-memory

./: .gitignore  README.md  pyproject.toml
docs/: ablation_results.md  bad_case_analysis.md  cam_style_insertion_experiment.md  evidence_rescue_experiment.md  experiment1_graph_density_report.md  experiment2_defense_storyline.md  experiment2_memory_compression_report.md  experiment2_midterm_defense_report.md  experiment_protocol.md  graph_density_experiment.md  graph_strategy_experiment.md  innovation_points.md  insight_memory_experiment.md  insight_reconstruction_comparison_experiment.md  midterm_progress.md  object_graph_framework.md  official_baseline_audit.json  official_baseline_audit.md  opening_plan_audit.json  opening_plan_audit.md  opening_plan_progress.md  system_design.md
reports/: dataset_references.json  experiment_results.json  experiment_results.md  graph_artifact.json  graph_mermaid.md  graph_view.html  hotpotqa_sample_manifest.json
scripts/: audit_edge_quality.py  audit_experiment_run.py  audit_graph_strategy_report.py  audit_opening_plan_progress.py  check_chat_provider.py  check_embedding_provider.py  check_model_providers.py  create_env_template.py  generate_answers.py  plan_embedding_run.py  plan_local_embedding.py  plot_evidence_rescue_cost_figure.py  prepare_hotpotqa.py  prepare_litsearch.py  prepare_novelqa.py  prepare_qasper.py  prepare_scifact.py  render_progress_plan_figure.py  render_sam_memory_process_figure.py  run_agent_generation_experiment.py  run_agent_memory_reuse_experiment.py  run_agent_workflow.py  run_analogy_reuse_experiment.py  (+14 more)
(+64 files in other folders)
