[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sam"
version = "0.1.0"
description = "基于语义联想机制的动态知识图谱记忆系统原型"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.21,<3",
    "matplotlib>=3.8",
    "openai>=1.0.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "requests>=2.32.2",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[project.optional-dependencies]
local-embedding = [
    "sentence-transformers>=3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
